--- a/README
+++ b/README
@@ -5,4 +5,4 @@ There are some enhancements too, such as a more terse e-mail reminder system for
 The primary use is for e-mail reminders.  The remembering part was really of no use for me, but if someone wishes to implement this with a good argument for having it, be my guest.
 
 Dependencies:
-tmail, rails, net/imap (with ssl for gmail), haml
+tmail, rails, net/imap (with ssl for gmail), haml, Chronic
